--- a/package.json
+++ b/package.json
@@ -3,20 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "antd-mobile": "^5.39.0",
+    "axios": "^1.9.0",
+    "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start & npm run server",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject",
+    "server": "json-server ./server/data.json --port 8888"
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +43,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@craco/craco": "^7.1.0",
+    "json-server": "^1.0.0-beta.3",
+    "less": "^4.3.0",
+    "sass": "^1.89.1",
+    "scss": "^0.2.4"
   }
 }
