--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "json-server": "^1.0.0-beta.3",
     "less": "^4.3.0",
     "sass": "^1.89.1",
+    "sass-loader": "^16.0.5",
     "scss": "^0.2.4"
   }
 }
